# LeWM

./: .gitignore  Dockerfile  README.md  pyproject.toml  train.py
configs/: config.yaml
configs/loss/: default.yaml
configs/model/: default.yaml  dino.yaml  with_decoder.yaml
configs/training/: default.yaml
model/: LWM.py  dataset.py  loss.py
model/components/: __init__.py  adaln.py  decoder.py  dino_encoder.py  encoder.py  model_blocks.py  predictor.py
model/configs/: models.py
scripts/: build_and_push.sh  download_data.sh  runpod_direct_setup.sh  runpod_setup.sh
