[project]
name = "le-world-model"
version = "0.1.0"
description = "Le World Model - Latent dynamics prediction with Vision Transformers"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=1.0.20",  # DINOv3 support added in 1.0.20

    # Configuration & Validation
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pydantic>=2.0.0",

    # Utilities
    "einops>=0.7.0",
    "numpy>=1.24.0",
    "h5py>=3.10.0",
    "hdf5plugin>=4.0.0",

    # Experiment Tracking
    "wandb>=0.16.0",

    # Progress & Logging
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=model --cov-report=term-missing"
